--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,21 @@
 </head>
  <body>
  <div th:replace="/header :: header"> </div>
+ <div class="col-lg-12 text-center mt-5">
+    <h4>Welcome to ClosingTime, we are excited to help you close on your new home!
 
+    </h4>
+  </div>
+  
+  <div class="col-md-4 offset-md-4 mt-5 border border-success pt-3">
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Enter an address, neighborhood, city, or ZIP code" aria-label="Recipient's username">
+    <div class="input-group-append">
+      <span class="input-group-text"><i class="fa fa-search"></i></span>
+    </div>
+    </div>
+  </div>
+  </div>
+  </div>
  </body>
  </html>
-
- 
