Ms.3 ( Fixed account.html )

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -6,8 +6,33 @@
     <div th:replace="/header :: Header"> </div>
     <title>Account</title>
 </head>
-<body>
+
 <div th:replace="/header :: header"> </div>
-<div>Accounts</div>
+<body>
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Account Type</th>
+        <th scope="col">Buyer</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Name</td>
+        <td>John Smith</td>
+
+    </tr>
+    <tr>
+        <td>Location</td>
+        <td>Chicago</td>
+
+    </tr>
+    <tr>
+        <td>Favorite</td>
+        <td>House, Condo</td>
+
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
