--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -8,12 +8,16 @@
     <div th:replace="/header :: Header"> </div>
 </head>
 <body>
+
 <div th:replace="/header :: header"> </div>
+<div class="container">
 <div class="form-group">
     <label for="exampleFormControlTextarea1">Chat Box</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="18"></textarea>
 </div>
+
 <button type="button" class="btn btn-success">Submit</button>
-<div>This is the chat</div>
+    </div>
+
 </body>
 </html>
