--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,7 +22,7 @@
             <h1>
                 <a   th:href="@{/buy}"  style="background-color:black"  type="button" class="btn btn-large btn-success"> Buy </a>
                 <a th:href="@{/favorites}" style="background-color:black" type="button" class="btn btn-large btn-success"> Favorites </a>
-                 ClosingTime
+                <a th:href="@{/}">ClosingTime</a> 
                 <a th:href="@{/chat}" style="background-color:black" type="button" class="btn btn-large btn-success"> Chat </a>
                 <a th:href="@{/account}" style="background-color:black" type="button" class="btn btn-large btn-success"> Account </a>
             </h1>
