--- a/src/main/resources/templates/buy.html
+++ b/src/main/resources/templates/buy.html
@@ -10,7 +10,37 @@
 <body>
 
 <div th:replace="/header :: header"> </div>
-<div>Hey what you want to buy</div>
+
+<div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Amazing Cando!!!!</h5>
+        <p class="card-text"> 2Beds 2Baths 1,250 Sq.Ft</p>
+    </div>
+    <div class="card-body">
+        <a href="#" class="card-link">Condo link</a>
+    </div>
+</div>
+<div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Beautiful Detached Single Family!!!!</h5>
+        <p class="card-text"> 4Beds 2Baths 3,190 Sq.Ft</p>
+    </div>
+    <div class="card-body">
+        <a href="#" class="card-link">House link</a>
+    </div>
+</div>
+<div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Duplex Condo!!!!</h5>
+        <p class="card-text"> 3Beds 2.5Baths 1,800 Sq.Ft</p>
+    </div>
+    <div class="card-body">
+        <a href="#" class="card-link">Condo link</a>
+    </div>
+</div>
 
 </body>
 </html>
