Ms.3 ( Fixed buy.html )

--- a/src/main/resources/templates/buy.html
+++ b/src/main/resources/templates/buy.html
@@ -18,7 +18,7 @@
 <div class="card" style="width: 18rem;">
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
-        <h5 class="card-title">Amazing Cando!!!!</h5>
+        <h5 class="card-title">Amazing Condo!!!!</h5>
         <p class="card-text"> 2Beds 2Baths 1,250 Sq.Ft</p>
     </div>
     <div class="card-body">
