--- a/src/main/resources/templates/buy.html
+++ b/src/main/resources/templates/buy.html
@@ -23,6 +23,8 @@
     </div>
     <div class="card-body">
         <a href="#" class="card-link">Condo link</a>
+        <a href="#" class="card-link">Add to Favorite</a>
+
     </div>
 </div>
 <div class="card" style="width: 18rem;">
@@ -33,6 +35,7 @@
     </div>
     <div class="card-body">
         <a href="#" class="card-link">House link</a>
+        <a href="#" class="card-link">Add to Favorite</a>
     </div>
 </div>
 <div class="card" style="width: 18rem;">
@@ -43,6 +46,7 @@
     </div>
     <div class="card-body">
         <a href="#" class="card-link">Condo link</a>
+        <a href="#" class="card-link">Add to Favorite</a>
     </div>
 </div>
 
